Android Viewpager added for History section
Android viewpager with 7 tabs have been added for History section, it
will open a new activity -HistoryActivity on click of History option in
Navigation Drawer. Working like a charm.. :+1:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">Royal Enfield</string>
     <string name="page_bike">List</string>
-    <string name="title_section1">Home</string>
+    <string name="history">RE History</string>
+        <string name="title_section1">About</string>
     <string name="title_section2">MotorCycles</string>
-    <string name="title_section3">About</string>
+    <string name="title_section3">History</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
