Added keywords in Strings.xml
Made text changes with all text entries in Strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,28 @@
     <string name="title_section3">RE History</string>
     <string name="title_section4">My Details</string>
     <string name="title_section5">My Trip</string>
+    <string name="sample_text">check</string>
+    <string name="header1">Royal Enfield Motorcycles</string>
+    <string name="Username">Username</string>
+    <string name="Username_hint">Username</string>
+    <string name="Bull_Type">Bull Type</string>
+    <string name="findShowroom">Find Showroom</string>
+    <string name="Mileage">Mileage</string>
+    <string name="MileageHint">Mileage (approx)</string>
+    <string name="fuelCost">Fuel Cost</string>
+    <string name="fuelcostHint">Fuel cost per litre</string>
+    <string name="emailId">Email Id</string>
+    <string name="emailidHint">Email Id</string>
+    <string name="ButtonProceed">Proceed</string>
+    <string name="ButtonFetch">Fetch</string>
+    <string name="CheckboxText">Please tick if return journey is applicable</string>
+    <string name="From">From</string>
+    <string name="To">To</string>
+    <string name="FromHint">From</string>
+    <string name="ToHint">To</string>
+    <string name="maybeLater">Maybe Later</string>
+    <string name="PlanTrip">Plan my Trip</string>
+    <string name="ViewTrip">View my Trip</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
