Code optimization and APK size reduction
Code optimized and new requirement added in PlanMyTrip class to show all
details from the onClick of result in list view.

jpegs compressed for images shown in About and History fragments.

APK file size reduced from 13.32 to 11.70 MB. More compression will be
done in future commits.

New APK released for beta testing in Play Store with updated version
no-6 and version code-1.5

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="header1">Royal Enfield Motorcycles</string>
     <string name="header2">Nearby Gas Station</string>
     <string name="header3">For Developers</string>
-    <string name="Range">Range</string>
+    <string name="Range">Range (in kms)</string>
     <string name="Username">Username</string>
     <string name="Username_hint">Username</string>
     <string name="Bull_Type">Bull Type</string>
