--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="sample_text">check</string>
     <string name="header1">Royal Enfield Motorcycles</string>
     <string name="header2">Nearby Gas Station</string>
-    <string name="header3">For Developers</string>
+    <string name="header3">Info for Users/Developers</string>
     <string name="Range">Range (in kms)</string>
     <string name="Username">Username</string>
     <string name="Username_hint">Username</string>
