Code optimization and production apk release
Code optimized, unneeded files removed, comments and log clean up done.
Slight UI modification done.
Set reminder option added in View All page.
App URL provided for Rate App and Tell a Friend features. App moved to
production with version 1.8

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="action_back">Back</string>
     <string name="action_share">Share</string>
     <string name="action_clear">Clear All</string>
+    <string name="action_reminder">Set Reminder</string>
 
     <string-array name="bikeName">
         <item>Standard Bullet 350</item>
