Royal Enfield Himalayan tab added
A new tab with details about Royal Enfield Himalayan motorcycle has been
added and uploaded to playstore.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="title_section5">My Trip</string>
     <string name="title_section6">Find Gas Station</string>
     <string name="title_section7">Rate App</string>
+    <string name="title_section8">Himalayan</string>
     <string name="sample_text">check</string>
     <string name="header1">RE Motorcycles</string>
     <string name="header2">Nearby Gas Station</string>
